# paige

./: Cargo.toml  README.md  ignorer_temp
examples/: hello_world.rs  hello_world_pretty.rs  index_with_nav.rs
src/: attrs.rs  el.rs  element.rs  formatter.rs  lib.rs  markup.rs  page.rs  property.rs  props.rs  tag.rs  tagtype.rs  traits.rs
src/element/: attributes.rs  element.rs  mod.rs  properties.rs  tags.rs  val.rs
src/elemental/: attributes.rs  properties.rs
src/elements/: element.rs  properties.rs
src/tests/: mod.rs
