[package]
name = "paige"
version = "0.1.0"
authors = ["anyusernameworks <patlymlatun@gmail.com>"]
edition = "2018"
license-file = "./LICENSE"
description = "A simple HTML API for creating and reusing HTML templates."
repository = "https://github.com/anyusernameworks/paige.git"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
