[package]
name = "paige"
version = "0.1.2"
authors = ["anyusernameworks <patlymlatun@gmail.com>"]
edition = "2018"
license-file = "./LICENSE"
description = "A simple HTML templating API, written in Rust."
readme = "README.md"
keywords = ["html", "template", "templating"]
categories = ["web-programming"]

documentation = "https://docs.rs/paige"
repository = "https://github.com/anyusernameworks/paige.git"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
